Fix floated image on mobile

--- a/src/components/post/styles.scss
+++ b/src/components/post/styles.scss
@@ -62,6 +62,13 @@
       float: right;
       margin-left: 1.5rem;
     }
+
+    @media ( max-width: 600px ) {
+      float: none;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
 
